--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "src"}]
 [tool.poetry.dependencies]
 python = "^3.13"
 pydantic = "^2.10.0"
+lxml = "^5.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
