--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,12 @@ packages = [{include = "src"}]
 python = "^3.13"
 pydantic = "^2.10.0"
 lxml = "^5.3.0"
+python-dotenv = "^1.0.1"
+pydantic-settings = "^2.7.0"
+chromadb = "^1.4.1"
+tenacity = "^9.1.2"
+google-genai = "^1.61.0"
+tqdm = "^4.67.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
