--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ chromadb = "^1.4.1"
 tenacity = "^9.1.2"
 google-genai = "^1.61.0"
 tqdm = "^4.67.0"
+streamlit = "^1.54.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
